--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:padding="16dp">
+        android:paddingTop="16dp">
 
         <!--Team A Layout block-->
         <LinearLayout
@@ -29,7 +29,6 @@
                 android:fontFamily="sans-serif-medium"
                 android:textColor="#616161"
                 android:layout_marginBottom="16dp"
-                android:padding="4dp"
                 android:text="@string/teamA" />
 
             <TextView
@@ -48,7 +47,9 @@
                 android:id="@+id/button3teamA"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
                 android:onClick="plusThreeForTeamA"
                 android:text="+3 POINTS" />
 
@@ -56,7 +57,10 @@
                 android:id="@+id/button2teamA"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
                 android:onClick="plusTwoForTeamA"
                 android:text="+2 POINTS" />
 
@@ -64,7 +68,9 @@
                 android:id="@+id/button1teamA"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
                 android:onClick="freeThrowForTeamA"
                 android:text="FREE THROW" />
 
@@ -95,7 +101,6 @@
                 android:fontFamily="sans-serif-medium"
                 android:textColor="#616161"
                 android:layout_marginBottom="16dp"
-                android:padding="4dp"
                 android:text="@string/teamB" />
 
             <TextView
@@ -114,7 +119,9 @@
                 android:id="@+id/button3teamB"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
                 android:onClick="plusThreeForTeamB"
                 android:text="+3 POINTS" />
 
@@ -122,7 +129,10 @@
                 android:id="@+id/button2teamB"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
                 android:onClick="plusTwoForTeamB"
                 android:text="+2 POINTS" />
 
@@ -130,7 +140,9 @@
                 android:id="@+id/button1teamB"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
                 android:onClick="freeThrowForTeamB"
                 android:text="FREE THROW" />
 
@@ -145,6 +157,7 @@
         android:text="Reset"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="32dp"
         android:onClick="resetScores"
         />
 
